--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -1,7 +1,8 @@
 <div class="output-component-layout">
-  <h1> OutputComponent here: </h1>
-  <p> click button để gửi output tới Parent component</p>
-  <button (click)="this.onClick1()" class="button">@Output('output1') testOutput1 </button>
-  <br>
+  <h1>output.Component:</h1>
+  <p>click button để gửi @output tới Parent component</p>
+
+  <button (click)="this.onClick1()" class="button">@Output('output1') testOutput1</button>
+  <br />
   <button (click)="this.onClick2()" class="button2">@Output() output2</button>
 </div>
