--- a/src/app/input-interceptor/input-interceptor.component.scss
+++ b/src/app/input-interceptor/input-interceptor.component.scss
@@ -1,10 +1,10 @@
-.input-interceptor-component-layout{
-  border-style: solid ;
+.input-interceptor-component-layout {
+  border-style: solid;
   border-width: 10px;
+  border-color: blue;
   background-color: white;
   padding: 30px;
   align-content: center;
   width: fit-content;
   margin-top: 20px;
 }
-
