--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,6 +1,9 @@
 <div class="input-component-layout">
-  <h1> inputComponent here: </h1>
-  <p> input data lấy từ Parent Component</p>
-  <h2> @Input('input1'): {{ name1 }}</h2>
-  <h2>@Input() input2: {{ input2}}</h2>
+  <h1>inputComponent here:</h1>
+  <p>input data lấy từ Parent Component</p>
+  <p style="color: blue">
+    &lt;app-input [input1]=&quot;title1&quot; [input2]=&quot;title2&quot;&gt;&lt;/app-input&gt;
+  </p>
+  <h2>@Input('input1'): {{ name1 }}</h2>
+  <h2>@Input() input2: {{ input2 }}</h2>
 </div>
