--- a/src/app/input/input.component.scss
+++ b/src/app/input/input.component.scss
@@ -1,15 +1,16 @@
-.input-component-layout{
-  border-style: solid ;
+.input-component-layout {
+  border-style: solid;
   border-width: 10px;
   background-color: greenyellow;
+  border-color: blue;
   padding: 30px;
   align-content: center;
   width: fit-content;
   margin-top: 20px;
 }
-h1{
+h1 {
   color: black;
 }
-h2{
+h2 {
   color: red;
 }
