--- a/src/app/output/output.component.scss
+++ b/src/app/output/output.component.scss
@@ -1,7 +1,8 @@
-.output-component-layout{
-  border-style: solid ;
+.output-component-layout {
+  border-style: solid;
   border-width: 10px;
   background-color: greenyellow;
+  border-color: blue;
   padding: 30px;
   align-content: center;
   width: fit-content;
