--- a/src/app/input-output/input-output.component.scss
+++ b/src/app/input-output/input-output.component.scss
@@ -1,16 +1,10 @@
-.input-component-layout {
+.component-layout {
   border-style: solid;
-  border-width: 2px;
-  background-color: greenyellow;
+  border-width: 10px;
   border-color: blue;
+  background-color: white;
   padding: 30px;
   align-content: center;
   width: fit-content;
   margin-top: 20px;
-}
-h1 {
-  color: black;
-}
-h2 {
-  color: red;
 }
