--- a/src/app/input-interceptor/input-interceptor.component.html
+++ b/src/app/input-interceptor/input-interceptor.component.html
@@ -1,5 +1,10 @@
 <div class="input-interceptor-component-layout">
-  <h1> input-interceptor.component: </h1>
-  <p> input Event sẽ đc interceptor để thay đổi giá trị trc khi tra ve giá trị</p>
-  <h2> @Input get set = {{name}}</h2>
+  <h1>input-interceptor.component:</h1>
+  <p>
+    input Event sẽ đc interceptor để thay đổi giá trị trc khi tra ve giá trị
+    <br />
+    order của @input[] ở *.html sẽ là order trigger Event của setter
+  </p>
+  <h2>@Input get set name() = {{ name }}</h2>
+  <h2>@Input get set lastName()= {{ lastName }}</h2>
 </div>
